# rust-api

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yaml
api/: Cargo.toml
api/src/: get_tempo_handler.rs  lib.rs  post_cities.rs
application/: Cargo.toml
application/src/: lib.rs
application/src/dto/: climatempo.rs  mod.rs
application/src/usecase/: get_tempo.rs  mod.rs  post_cities.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
migrations/2024-01-17-025016_cities/: down.sql  up.sql
src/: main.rs
src/controller/: climatempo_controller.rs  mod.rs
src/dto/: climatempo_dto.rs  mod.rs
src/service/: climatempo_service.rs  mod.rs
