[package]
name = "prog_23_clima_tempo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json", "serde_json"] }
reqwest = { version = "0.11.23", features = ["json"] }