[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }

rocket = { version = "0.5.0", features = ["json", "serde_json"] }
diesel = { version = "2.1.4", features = ["postgres"] }
reqwest = { version = "0.11.23", features = ["json"] }